fix footer spacing

--- a/style.css
+++ b/style.css
@@ -238,9 +238,12 @@ body {
 
 .section6-paragraph {
     margin-right: -5px;
+    display: flex;
+    flex-direction: row;
 }
 
 .section6-paragraph a {
+    display: flex;
     color: white;
     text-decoration: none;
     font-size: clamp(2rem, 5vw, 3rem);
@@ -248,6 +251,10 @@ body {
     right: 10%;
     top: 5.75px;
     position: relative;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .section6-paragraph a:hover {
@@ -373,6 +380,20 @@ body {
 
     .section6-heading {
         margin-left: 30px;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .section6-paragraph {
+        display: flex;
+        flex: 0 0 25%;
+        flex-wrap: wrap;
+        gap: 7px 10px;
+        margin-right: 1vw;
+    }
+    .section6-paragraph a {
+        right: 10%;
+        padding: 5px;
     }
 }
 
